crates/compiler/tests/parse_errors/too_much_indent.elm
module Main exposing (..)

  import String

x = 1
